# rust-dir-name-comparison

./: Cargo.toml
src/: main.rs
